--- a/pwa/training/training.css
+++ b/pwa/training/training.css
@@ -22,6 +22,7 @@ body div.desc {
   h1,
   h2,
   h3,
+  .h3,
   h4 {
     font-weight: normal;
     margin: 0 auto;
@@ -31,10 +32,11 @@ body div.desc {
     display: inline-block;
     font-weight: bold;
   }
-  h3 {
+  h3,
+  .h3 {
     line-height: 1.3;
     margin: 1em auto;
-    max-width: 600px;
+    max-width: 500px;
   }
 
 a {
@@ -67,6 +69,12 @@ header h1 {
   }
   #hdrLogo h1 {
     cursor: pointer;
+  }
+  header .h3 {
+    font-size: 18px;
+  }
+  header .h3 a {
+    font-size: 17px;
   }
 .header-below {
   border-bottom: 1px solid hsla(195, 100%, 41%, 0.5);
