PWA - EA2018: Added 'Last Updated' in footer.

--- a/pwa/training/training.css
+++ b/pwa/training/training.css
@@ -95,9 +95,10 @@ footer {
   text-align: center;
   width: 98%;
 }
-  footer h2 {
+  footer .msg,
+  footer .msg a {
     color: #999999;
-    font-size: 18px;
+    font-size: 12px;
     line-height: 1;
     margin: 20px auto 10px;
     padding: 0;
