--- a/pwa/training/training.css
+++ b/pwa/training/training.css
@@ -562,28 +562,32 @@ main.main {
   .main-wrapper main.main .card:nth-child(1):before,
   .main-wrapper main.main .card:nth-child(5):before,
   .main-wrapper main.main .card:nth-child(9):before,
-  .main-wrapper main.main .card:nth-child(13):before {
+  .main-wrapper main.main .card:nth-child(13):before,
+  .main-wrapper main.main .card:nth-child(17):before {
     border-left: var(--post-it-cut-1a);
     border-top: var(--post-it-cut-1b);
   }
   .main-wrapper main.main .card:nth-child(2):before,
   .main-wrapper main.main .card:nth-child(6):before,
   .main-wrapper main.main .card:nth-child(10):before,
-  .main-wrapper main.main .card:nth-child(14):before {
+  .main-wrapper main.main .card:nth-child(14):before,
+  .main-wrapper main.main .card:nth-child(18):before {
     border-left: var(--post-it-cut-2a);
     border-top: var(--post-it-cut-2b);
   }
   .main-wrapper main.main .card:nth-child(3):before,
   .main-wrapper main.main .card:nth-child(7):before,
   .main-wrapper main.main .card:nth-child(11):before,
-  .main-wrapper main.main .card:nth-child(15):before {
+  .main-wrapper main.main .card:nth-child(15):before,
+  .main-wrapper main.main .card:nth-child(19):before {
     border-left: var(--post-it-cut-3a);
     border-top: var(--post-it-cut-3b);
   }
   .main-wrapper main.main .card:nth-child(4):before,
   .main-wrapper main.main .card:nth-child(8):before,
   .main-wrapper main.main .card:nth-child(12):before,
-  .main-wrapper main.main .card:nth-child(16):before {
+  .main-wrapper main.main .card:nth-child(16):before,
+  .main-wrapper main.main .card:nth-child(20):before {
     border-left: var(--post-it-cut-4a);
     border-top: var(--post-it-cut-4b);
   }
@@ -593,25 +597,29 @@ main.main {
   .main-wrapper main.main .card:nth-child(1),
   .main-wrapper main.main .card:nth-child(5),
   .main-wrapper main.main .card:nth-child(9),
-  .main-wrapper main.main .card:nth-child(13) {
+  .main-wrapper main.main .card:nth-child(13),
+  .main-wrapper main.main .card:nth-child(17) {
     transform: rotate(var(--post-it-1b));
   }
   .main-wrapper main.main .card:nth-child(2),
   .main-wrapper main.main .card:nth-child(6),
   .main-wrapper main.main .card:nth-child(10),
-  .main-wrapper main.main .card:nth-child(14) {
+  .main-wrapper main.main .card:nth-child(14),
+  .main-wrapper main.main .card:nth-child(18) {
     transform: rotate(var(--post-it-2b));
   }
   .main-wrapper main.main .card:nth-child(3),
   .main-wrapper main.main .card:nth-child(7),
   .main-wrapper main.main .card:nth-child(11),
-  .main-wrapper main.main .card:nth-child(15) {
+  .main-wrapper main.main .card:nth-child(15),
+  .main-wrapper main.main .card:nth-child(19) {
     transform: rotate(var(--post-it-3b));
   }
   .main-wrapper main.main .card:nth-child(4),
   .main-wrapper main.main .card:nth-child(8),
   .main-wrapper main.main .card:nth-child(12),
-  .main-wrapper main.main .card:nth-child(16) {
+  .main-wrapper main.main .card:nth-child(16),
+  .main-wrapper main.main .card:nth-child(20) {
     transform: rotate(var(--post-it-4b));
   }
 
@@ -619,25 +627,29 @@ main.main {
     .main-wrapper main.main .card:nth-child(1),
     .main-wrapper main.main .card:nth-child(5),
     .main-wrapper main.main .card:nth-child(9),
-    .main-wrapper main.main .card:nth-child(13) {
+    .main-wrapper main.main .card:nth-child(13),
+    .main-wrapper main.main .card:nth-child(17) {
       transform: rotate(var(--post-it-1));
     }
     .main-wrapper main.main .card:nth-child(2),
     .main-wrapper main.main .card:nth-child(6),
     .main-wrapper main.main .card:nth-child(10),
-    .main-wrapper main.main .card:nth-child(14) {
+    .main-wrapper main.main .card:nth-child(14),
+    .main-wrapper main.main .card:nth-child(18) {
       transform: rotate(var(--post-it-2));
     }
     .main-wrapper main.main .card:nth-child(3),
     .main-wrapper main.main .card:nth-child(7),
     .main-wrapper main.main .card:nth-child(11),
-    .main-wrapper main.main .card:nth-child(15) {
+    .main-wrapper main.main .card:nth-child(15),
+    .main-wrapper main.main .card:nth-child(19) {
       transform: rotate(var(--post-it-3));
     }
     .main-wrapper main.main .card:nth-child(4),
     .main-wrapper main.main .card:nth-child(8),
     .main-wrapper main.main .card:nth-child(12),
-    .main-wrapper main.main .card:nth-child(16) {
+    .main-wrapper main.main .card:nth-child(16),
+    .main-wrapper main.main .card:nth-child(20) {
       transform: rotate(var(--post-it-4));
     }
   }
